deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arquitetura-kanban
  namespace: arquitetura-kanban
  labels:
    app.kubernetes.io/name: arquitetura-kanban
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: arquitetura-kanban
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
